--- a/templates/classement.html
+++ b/templates/classement.html
@@ -2,12 +2,11 @@
 <html>
 <head>
     <title>Classement</title>
-    <meta http-equiv="refresh" content="3">
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
 
-<h1>🏆 Classement en direct 🏆</h1>
+<h1>🏆 Classement Admin 🏆</h1>
 
 <table>
 <tr>
@@ -23,11 +22,7 @@
     <td>{{ joueur["score"] }}</td>
 </tr>
 {% endfor %}
-
 </table>
-
-<br>
-<a href="/">Retour</a>
 
 </body>
 </html>
