--- a/static/style.css
+++ b/static/style.css
@@ -51,3 +51,34 @@ table {
     width: 80%;
     max-width: 600px;
 }
+.podium {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin: 30px;
+}
+
+.place {
+    margin: 10px;
+    padding: 20px;
+    border-radius: 15px;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+}
+
+.first {
+    background: gold;
+    height: 180px;
+    font-size: 22px;
+}
+
+.second {
+    background: silver;
+    height: 140px;
+}
+
+.third {
+    background: #cd7f32;
+    height: 120px;
+}
