--- a/static/style.css
+++ b/static/style.css
@@ -50,35 +50,46 @@ table {
     border-radius: 10px;
     width: 80%;
     max-width: 600px;
+    border-collapse: collapse;
 }
+
+th, td {
+    padding: 10px;
+}
+
+/* PODIUM */
+
 .podium {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    margin: 30px;
+    margin: 30px 0;
+    gap: 15px;
 }
 
 .place {
-    margin: 10px;
     padding: 20px;
     border-radius: 15px;
-    color: white;
     font-weight: bold;
     text-align: center;
+    width: 120px;
 }
 
 .first {
     background: gold;
     height: 180px;
     font-size: 22px;
+    color: black;
 }
 
 .second {
     background: silver;
     height: 140px;
+    color: black;
 }
 
 .third {
     background: #cd7f32;
     height: 120px;
+    color: white;
 }
