Fix full routing and classement page

--- a/templates/classement.html
+++ b/templates/classement.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 
-<h1>🏆 Classement Admin 🏆</h1>
+<h1>🏆 Classement 🏆</h1>
+
+<a href="/">
+    <button>⬅ Retour au jeu</button>
+</a>
 
 <table>
 <tr>
