--- a/templates/classement.html
+++ b/templates/classement.html
@@ -6,26 +6,27 @@
 </head>
 <body>
 
-<h1>🏆 Classement 🏆</h1>
+<h1>🏆 Classement</h1>
 
 <a href="/">
-    <button>⬅ Retour au jeu</button>
+    <button>⬅ Retour</button>
 </a>
 
 <table>
 <tr>
-    <th>Position</th>
-    <th>Numéro</th>
-    <th>Score</th>
+<th>#</th>
+<th>Numéro</th>
+<th>Score</th>
 </tr>
 
 {% for joueur in joueurs %}
 <tr>
-    <td>{{ loop.index }}</td>
-    <td>{{ joueur["numero"] }}</td>
-    <td>{{ joueur["score"] }}</td>
+<td>{{ loop.index }}</td>
+<td>{{ joueur["numero"] }}</td>
+<td>{{ joueur["score"] }}</td>
 </tr>
 {% endfor %}
+
 </table>
 
 </body>
