Full clean version stable

--- a/templates/classement.html
+++ b/templates/classement.html
@@ -8,8 +8,8 @@
 
 <h1>🏆 Classement</h1>
 
-<a href="/">
-    <button>⬅ Retour</button>
+<a href="/jeu">
+    <button>⬅ Retour au jeu</button>
 </a>
 
 <table>
